@@ -141,4 +141,12 @@ void clearlooks_draw_arrow            (cairo_t *cr,
                                        const WidgetParameters          *widget,
                                        const ArrowParameters           *arrow,
                                        int x, int y, int width, int height);
+
+void clearlooks_draw_resize_grip      (cairo_t *cr,
+                                       const ClearlooksColors          *colors,
+                                       const WidgetParameters          *widget,
+                                       const ResizeGripParameters      *grip,
+                                       int x, int y, int width, int height);
+
+
 #endif /* CLEARLOOKS_DRAW_H */
