@@ -1,6 +1,16 @@
 2006-01-15  Richard A. Stellingwerff  <remenic@gmail.com>
 
 	* engines/clearlooks/src/clearlooks_draw.c:
+	(clearlooks_draw_resize_grip):
+	* engines/clearlooks/src/clearlooks_draw.h:
+	* engines/clearlooks/src/clearlooks_style.c: (draw_resize_grip):
+	* engines/clearlooks/src/clearlooks_types.h:
+
+	Added the resize grip.
+
+2006-01-15  Richard A. Stellingwerff  <remenic@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw.c:
 	(clearlooks_draw_menuitem):
 	
 	Fixed memory leak.
